--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -24,3 +24,12 @@ input, textarea {
     border: none;
   }
 }
+
+input {
+  padding: 1.1rem 1.1rem;
+  border: 1px solid #c2c6cc
+}
+
+button {
+  padding: 1.1rem 1.1rem;
+}
